fixed create collaborateur back-end

--- a/API_MySIRH/appsettings.Development.json
+++ b/API_MySIRH/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=OUJ1WR1NK2;Initial Catalog=MySIRH;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
